# Speed-control-based-on-detection-result

./: .gitignore  README.md
scripts/: setup.sh
speed_controller_cpp/: CMakeLists.txt  package.xml
speed_controller_cpp/config/: stop_line.param.yaml
speed_controller_cpp/include/speed_controller_cpp/: speed_controller.hpp  speed_controller_core.hpp
speed_controller_cpp/launch/: speed_controller.launch.py
speed_controller_cpp/src/: speed_controller.cpp  speed_controller_core.cpp  speed_controller_node.cpp
